--- a/HotelBookingApp/Views/Room/Index.cshtml
+++ b/HotelBookingApp/Views/Room/Index.cshtml
@@ -14,24 +14,21 @@
             @foreach (var room in Model)
             {
                 <div class="row p-2 bg-white border rounded">
-                    <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div>
+                    <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="@room.ImageUrl"></div>
                     <div class="col-md-6 mt-1">
-                        <h5>@room.Number</h5>
+                        <h5>@room.Name</h5>
                         <div class="d-flex flex-row">
-                            <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>310</span>
+                            <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>Room number: @room.Number.ToString().PadLeft(3, '0')</span>
                         </div>
-                        <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                        <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
                         <p class="text-justify text-truncate para mb-0">@room.Description<br><br></p>
                     </div>
                     <div class="align-items-center align-content-center col-md-3 border-left mt-1">
                         <div class="d-flex flex-row align-items-center">
-                            <h4 class="mr-1">$@room.Price</h4>@*<span class="strike-text">$20.99</span>*@
+                            <h4 class="mr-1">$@room.Price/night</h4>
                         </div>
-@*                        <h6 class="text-success">Free shipping</h6>*@
                         <div class="d-flex flex-column mt-4">
-@*                            <button class="btn btn-primary btn-sm" type="button">Details</button>*@
-                            <button class="btn btn-outline-primary btn-sm mt-2" type="button">Checkout</button></div>
+                            @Html.ActionLink("Details", "Details", "Room", new { roomId = room.Id }, new { @class = "btn btn-outline-primary btn-sm mt-2" })
+                        </div>
                     </div>
                 </div>
             }
