--- a/HotelBookingApp/Views/Room/Index.cshtml
+++ b/HotelBookingApp/Views/Room/Index.cshtml
@@ -18,7 +18,7 @@
                     <div class="col-md-6 mt-1">
                         <h5>@room.Name</h5>
                         <div class="d-flex flex-row">
-                            <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>Room number: @room.Number.ToString().PadLeft(3, '0')</span>
+                            <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>Room number: @room.PaddedNumber()</span>
                         </div>
                         <p class="text-justify text-truncate para mb-0">@room.Description<br><br></p>
                     </div>
