--- a/HotelBookingApp/Views/Booking/Index.cshtml
+++ b/HotelBookingApp/Views/Booking/Index.cshtml
@@ -11,6 +11,7 @@
                 <div class="card">
                     <div class="card-body p-4">
                         <form action="/booking/submit" method="post">
+                            @Html.HiddenFor(model => model.Booking.RoomId)
                             <div class="row">
 
                                 <div class="col-lg-7">
@@ -52,6 +53,10 @@
                                                 @Html.EditorFor(model => model.Booking.CheckOutDate, new { htmlAttributes = new { @type = "date", @class = "form-control", @min = DateTime.Now.AddDays(2).ToString("yyyy-MM-dd"), @max = DateTime.Now.AddYears(3).ToString("yyyy-MM-dd"), @id = "end", @name = "checkout" } })
 
                                             </div>
+                                            @if (ViewData["ErrorMessage"] != null && ViewData["ErrorMessage"].ToString() != "")
+                                            {
+                                                <span>@ViewData["ErrorMessage"].ToString()</span>
+                                            }
                                         </div>
                                     </div>
 
@@ -69,7 +74,8 @@
 
                                             <div class="d-flex justify-content-between">
                                                 <p class="mb-2">Total Price</p>
-                                                <p class="mb-2" id="totalPrice"></p>
+                                                @Html.EditorFor(model => model.Booking.TotalPrice, new { htmlAttributes = new { @class = "form-control mb-2", @disabled = "disabled", @id = "totalPrice" } })
+
                                             </div>
 
                                             <button type="submit" class="btn btn-info btn-block btn-lg">
@@ -103,14 +109,14 @@
             var endDate = new Date($("#end").val());
             var numberOfNights = Math.round((endDate - startDate) / (1000 * 60 * 60 * 24));
             $("#nrOfNights").text(numberOfNights);
-            $("#totalPrice").text(numberOfNights * @Model.Room.Price);
+            $("#totalPrice").val(numberOfNights * @Model.Room.Price);
             // Update the total price whenever the start or end date changes
             $("#start, #end").on("change", function () {
                 var startDate = new Date($("#start").val());
                 var endDate = new Date($("#end").val());
                 var numberOfNights = Math.round((endDate - startDate) / (1000 * 60 * 60 * 24));
                 $("#nrOfNights").text(numberOfNights);
-                $("#totalPrice").text(numberOfNights * @Model.Room.Price);
+                $("#totalPrice").val(numberOfNights * @Model.Room.Price);
             });
         });
     </script>
