Added room calendar for checkout page

--- a/HotelBookingApp/Views/Booking/Index.cshtml
+++ b/HotelBookingApp/Views/Booking/Index.cshtml
@@ -88,6 +88,7 @@
                                 </div>
                             </div>
                         </form>
+    <partial name="_RoomCalendar" model="@ViewData["Bookings"]" />
                     </div>
                 </div>
             </div>
