--- a/HotelBookingApp/Views/Shared/_RoomCalendar.cshtml
+++ b/HotelBookingApp/Views/Shared/_RoomCalendar.cshtml
@@ -8,7 +8,7 @@
     {
         <div>
             <h6>@booking.Room.Name</h6>
-            <label>Checkin and checkiut dates</label>
+            <label>Checkin and checkout dates</label>
             <p>From @booking.CheckInDate to @booking.CheckOutDate</p>
         </div>
     }
