--- a/HotelBookingApp/Views/Shared/_Layout.cshtml
+++ b/HotelBookingApp/Views/Shared/_Layout.cshtml
@@ -23,9 +23,12 @@
                         <li class="nav-item flex-row">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item flex-row">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="MyBookings">My Bookings</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item flex-row">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="MyBookings">My Bookings</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
