Added room creation

--- a/HotelBookingApp/Views/Booking/Confirmation.cshtml
+++ b/HotelBookingApp/Views/Booking/Confirmation.cshtml
@@ -4,4 +4,5 @@
 
 <h1>Thank you for reservation. You can see a list of all your current and past reservations <a asp-controller="Booking" asp-action="MyBookings">here</a>!</h1>
 @{
+    ViewBag.Title = "Confirmation";
 }
