--- a/HotelBookingApp/Views/Room/Index.cshtml
+++ b/HotelBookingApp/Views/Room/Index.cshtml
@@ -2,10 +2,14 @@
 
 @{
     ViewData["Title"] = "Room List";
+    bool isAdmin = User.IsInRole("Admin");
 }
-<div class="container">
-    <a href="/room/createroom" class="btn btn-primary">Create Room</a>
-</div>
+@if (isAdmin)
+{
+    <div class="container">
+        <a href="/room/createroom" class="btn btn-primary">Create Room</a>
+    </div>
+}
 
 
 <div class="container mt-5 mb-5">
